<resources>
    <!--<string name="app_name">M7019E_MiniProject</string>-->
    <string name="app_name">The D&amp;D App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage_fragment_label">Homepage Fragment</string>
    <string name="character_creation_fragment_label">Character Creation Fragment</string>
    <string name="back_label">Back</string>

    <!-- fragment_homepage -->
    <string name="character_create_string">Create new character</string>
    <string name="character_selection_string">Select a character</string>
    <string name="monster_manual_string">Monster manual</string>

    <!-- fragment_character_creation -->
    <string name="character_creation_name_hint">Choose a character name</string>
    <string name="cancel_string">Cancel</string>
    <string name="create_string">Create</string>
    <string name="class_hint">Class: </string>
    <string name="race_hint">Race: </string>
    <string name="strength_hint">STR</string>
    <string name="dexterity_hint">DEX</string>
    <string name="constitution_hint">CON</string>
    <string name="intelligence_hint">INT</string>
    <string name="wisdom_hint">WIS</string>
    <string name="charisma_hint">CHA</string>
    <string name="ability_scores_hint">Ability scores</string>
    <string name="character_attributes_hint">Character attributes</string>
    <string name="health_points_hint">HP</string>
    <string name="armour_class_hint">AC</string>
    <string name="initiative_hint">Initiative</string>
    <string name="speed_hint">Speed</string>
    <string-array name="dnd_race_array">
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>
    <string-array name="dnd_class_array">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string name="character_name">Character Name</string>
    <string name="temp_int">10</string>
    <string name="monster_name">Monster name</string>
    <string name="delete_character">Delete character</string>
    <string name="add_image">Add character Image</string>
    <string name="players_handbook_label">Player\'s handbook</string>
    <string name="players_handbook_instructions">Rotate the device to landscape mode to access the Player\'s handbook videos!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>