<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomepageFragment">

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/DnD_title" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/dnd_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_text" />

        <Button
            android:id="@+id/character_selection_button"
            style="@style/DnD_textButton"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_baseline_menu_40"
            android:text="@string/character_selection_string"
            app:layout_constraintBottom_toTopOf="@+id/monster_selection_button"
            app:layout_constraintEnd_toEndOf="@+id/character_create_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/character_create_button"
            app:layout_constraintTop_toBottomOf="@+id/character_create_button"
            app:rippleColor="@color/material_on_surface_stroke" />

        <Button
            android:id="@+id/monster_selection_button"
            style="@style/DnD_textButton"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/beholder"
            android:text="@string/monster_manual_string"
            app:layout_constraintBottom_toTopOf="@+id/players_handbook_button"
            app:layout_constraintEnd_toEndOf="@+id/character_selection_button"
            app:layout_constraintStart_toStartOf="@+id/character_selection_button"
            app:layout_constraintTop_toBottomOf="@+id/character_selection_button"
            app:rippleColor="@color/material_on_surface_stroke" />

        <Button
            android:id="@+id/character_create_button"
            style="@style/DnD_textButton"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_baseline_add_circle_outline_40"
            android:text="@string/character_create_string"
            app:layout_constraintBottom_toTopOf="@+id/character_selection_button"
            app:layout_constraintEnd_toEndOf="@+id/app_logo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/app_logo"
            app:layout_constraintTop_toBottomOf="@+id/app_logo"
            app:rippleColor="@color/material_on_surface_stroke" />

        <Button
            android:id="@+id/players_handbook_button"
            style="@style/DnD_textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableTop="@drawable/ic_baseline_menu_book_40"
            android:text="@string/players_handbook_label"
            app:layout_constraintEnd_toEndOf="@+id/monster_selection_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/monster_selection_button"
            app:layout_constraintTop_toBottomOf="@+id/monster_selection_button"
            app:rippleColor="@color/material_on_surface_stroke" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>